--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,5 @@
 @CHARSET "UTF-8";
 
-li.line {
-	list-style: none;
-/* 	border: 1px solid #e8e8e8; */
-	background-color: #e8e8e8;
-}
-
 .cursor {
 	display: inline-block;
 	min-width: 10px;
@@ -63,4 +57,8 @@ li.line {
 	text-align: center;
 	vertical-align: middle;
 	padding: 6px;
+}
+
+#protoRow {
+	background-color: yellow;
 }
