--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -4,7 +4,6 @@
     $aid = isset($_GET['aid']) ? $_GET['aid'] : -1;
 ?>
 
-<div id="aid" style="display: none"><?= $aid ?></div>
 <!-- HEADER -->
 <div class="page-header">
     <?php if ($aid > -1): ?>
@@ -29,19 +28,17 @@
                     </div>
                     <div id="genPanel" class="panel-collapse collapse">
                         <div class="panel-body">
+                            <div id="aid" style="display: none"><?= $aid ?></div>
                             <div class="form-group">
-                                <label for="in-name" class="control-label col-sm-3">Algorithm
-                                    name</label>
+                                <label for="in-name" class="control-label col-sm-3">Algorithm name</label>
                                 <div class="col-sm-9">
-                                    <input type="text" class="form-control" id="in-name"
-                                           placeholder="Algorithm name">
+                                    <input type="text" class="form-control" id="in-name" placeholder="Algorithm name">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="in-title" class="control-label col-sm-3">Description</label>
                                 <div class="col-sm-9">
-                                    <input type="text" class="form-control" id="in-title"
-                                           placeholder="Description in a couple of words">
+                                    <input type="text" class="form-control" id="in-title" placeholder="Description in a couple of words">
                                 </div>
                             </div>
                             <textarea class="form-control" id="in-desc" rows="3">Long description...</textarea>
@@ -86,8 +83,8 @@
             </div>
 
             <span id="saveAlgorithm" class="btn btn-primary btn-lg">Save</span>
-            <span id="saveSuccess" class="label label-success" style="display: none">Successfully saved to database!</span>
-            <span id="saveError" class="label label-danger" style="display: none">Error while saving algorithm to database!</span>
+            <span id="saveSuccess" class="label label-success" style="display: none"></span>
+            <span id="saveError" class="label label-danger" style="display: none"></span>
         </form>
     </div>
 </div>
