--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -16,6 +16,12 @@
 <div class="row">
     <!-- LEFT COLUMN -->
     <div class="col-md-6">
+        <div id="editAlert" class="alert alert-danger alert-dismissible" style="display:none">
+            <button id="editAlertClose" type="button" class="close">
+                <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
+            </button>
+            <strong><?= $l10n['error'] ?></strong><div id="editAlertText"></div>
+        </div>
         <form class="form-horizontal" role="form" method="post" name="algorithm">
             <div class="panel-group" id="accordion-left">
 
@@ -41,7 +47,8 @@
                                     <input type="text" class="form-control" id="in-title" placeholder="<?= $l10n['description'] ?>">
                                 </div>
                             </div>
-                            <textarea class="form-control" id="in-desc" rows="3"><?= $l10n['long_description'] ?></textarea>
+                            <textarea class="form-control" id="in-desc" rows="3"
+                                      data-placeholder="<?= $l10n['long_description'] ?>"><?= $l10n['long_description'] ?></textarea>
                         </div>
                     </div>
                 </div>
@@ -53,56 +60,90 @@
                             <span class="glyphicon glyphicon-chevron-right"></span> <?= $l10n['variables'] ?>
                         </h4>
                     </div>
-                    <div id="varPanel" class="panel-collapse collapse">
+                    <div id="varPanel" class="panel-collapse collapse in">
                         <div class="panel-body" style="text-align: center;">
-                            <div id="alert-var"></div>
-                            <div class="btn-group">
-                                <div class="btn btn-success btn-lg" id="btnAddVar"><span class="glyphicon glyphicon-plus" style="width: 100px;"></span></div>
+                            <div class="btn btn-success btn-lg" id="btnAddVar">
+                                <span class="glyphicon glyphicon-plus" style="width: 100px;"></span>
                             </div>
-                            <table class="table table-condensed table-bordered" style="margin-top: 10px; margin-bottom: 0px;">
+                            <table class="table table-condensed table-bordered variables">
                                 <tbody id="insertVarsHere">
-
-                                <tr class="dummyRow ui-droppable" style="display: none;"><td colspan="3"></td></tr>
-
-                                <tr id="var-0" class="varRow">
-                                    <td class="handle">⣿</td>
-                                    <td style="vertical-align: middle; text-align: left;">
-                                        <code class="cell">a = 7</code>
-                                    </td>
-                                    <td class="buttonArea">
-                                        <div class="btn-group btn-group-xs">
-                                            <button type="button" class="btn btn-default" id="btn-var-0-edit" value="0">
-                                                <span class="glyphicon glyphicon-pencil"></span>
-                                            </button>
-                                            <button type="button" class="btn btn-default" id="btn-var-0-remove" value="0" title="Remove variable">
-                                                <span class="glyphicon glyphicon-trash"></span>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr class="dummyRow ui-droppable" style="display: none;"><td colspan="3"></td></tr>
-
-                                <tr id="var-1" class="varRow ui-selected">
-                                    <td class="handle">⣿</td>
-                                    <td style="vertical-align: middle; text-align: left;">
-                                        <code class="cell">b = 13</code>
-                                    </td>
-                                    <td class="buttonArea">
-                                        <div class="btn-group btn-group-xs">
-                                            <button type="button" class="btn btn-default" id="btn-var-1-edit" value="1">
-                                                <span class="glyphicon glyphicon-pencil"></span>
-                                            </button>
-                                            <button type="button" class="btn btn-default" id="btn-var-1-remove" value="1" title="Remove variable">
-                                                <span class="glyphicon glyphicon-trash"></span>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr class="dummyRow ui-droppable" style="display: none;"><td colspan="3"></td></tr>
-
+                                    <tr class="dummyRow ui-droppable" style="display: none"><td colspan="2"></td></tr>
                                 </tbody>
+                                <tfoot>
+                                    <tr id="var-prototype" class="varRow" data-vid="" style="display: none">
+                                        <!-- Variable in view mode -->
+                                        <td class="content view" style="display: none">
+                                            <div class="col-lg-12">
+                                                <code class="cell"></code>
+                                            </div>
+                                        </td>
+                                        <td class="buttons view" style="display: none">
+                                            <div class="btn-group btn-group-xs">
+                                                <button type="button" class="btn btn-default btn-var-edit" value="0" title="<?= $l10n['edit_var'] ?>">
+                                                    <span class="glyphicon glyphicon-pencil"></span>
+                                                </button>
+                                                <button type="button" class="btn btn-default btn-var-remove" value="0" title="<?= $l10n['remove_var'] ?>">
+                                                    <span class="glyphicon glyphicon-trash"></span>
+                                                </button>
+                                            </div>
+                                        </td>
+
+                                        <!-- Variable in edit mode -->
+                                        <td class="content edit">
+                                            <div class="col-xs-4">
+                                                <div class="form-group name-group">
+                                                    <label class="sr-only" for="name"><?= $l10n['var_name'] ?></label>
+                                                    <input class="form-control name" value="" placeholder="<?= $l10n['name'] ?>" type="text">
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-1">
+                                                <div class="cell"><code>=</code></div>
+                                            </div>
+                                            <div class="col-xs-4">
+                                                <div class="form-group init-group">
+                                                    <label class="sr-only" for="init"><?= $l10n['init'] ?></label>
+                                                    <select class="form-control init">
+                                                        <optgroup label="Element">
+                                                            <option value="elem-?"><?= $l10n['uninitialized'] ?></option>
+                                                            <option value="elem-value" data-target=".value"><?= $l10n['value'] ?></option>
+                                                        </optgroup>
+                                                        <optgroup label="Array">
+                                                            <option value="array-?" data-target=".size"><?= $l10n['uninitialized'] ?></option>
+                                                            <option value="array-random" data-target=".size"><?= $l10n['random'] ?></option>
+                                                            <option value="array-custom" data-target=".value"><?= $l10n['custom'] ?></option>
+                                                        </optgroup>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-3">
+                                                <div class="form-group value-group" style="display: none">
+                                                    <label class="sr-only" for="value"><?= $l10n['init_value'] ?></label>
+                                                    <input class="form-control value" value="" placeholder="<?= $l10n['value'] ?>" type="text">
+                                                </div>
+                                                <div class="form-group size-group" style="display: none;">
+                                                    <label class="sr-only" for="size"><?= $l10n['array_size'] ?></label>
+                                                    <select class="form-control size">
+                                                        <optgroup label="<?= $l10n['size'] ?>">
+                                                            <?php for($i = ARRAY_MIN_SIZE; $i <= ARRAY_MAX_SIZE; $i++): ?>
+                                                            <option><?= $i ?></option>
+                                                            <?php endfor ?>
+                                                        </optgroup>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="buttons edit">
+                                            <div class="btn-group btn-group-xs">
+                                                <button type="button" class="btn btn-default btn-var-check" value="0" title="<?= $l10n['check_var'] ?>">
+                                                    <span class="glyphicon glyphicon-ok"></span>
+                                                </button>
+                                                <button type="button" class="btn btn-default btn-var-cancel" value="0" title="<?= $l10n['discard_changes'] ?>">
+                                                    <span class="glyphicon glyphicon-remove"></span>
+                                                </button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tfoot>
                             </table>
                         </div>
                     </div>
@@ -266,10 +307,7 @@
                     </div>
                 </div>
             </div>
-
-            <span id="saveAlgorithm" class="btn btn-primary btn-lg"><?= $l10n['save_algorithm'] ?></span>
             <span id="saveSuccess" class="label label-success" style="display: none"></span>
-            <span id="saveError" class="label label-danger" style="display: none"></span>
         </form>
     </div>
 </div>
