--- a/partials/register.phtml
+++ b/partials/register.phtml
@@ -1,4 +1,4 @@
-<?php if (!defined('ACTION')) die('You cannot call this script directly !'); ?>
+<?php if (!defined('BASEDIR')) die('You cannot call this script directly !') ?>
 
 <!-- HEADER -->
 <div class="page-header">
