--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -1,5 +1,5 @@
 <?php
-if (!defined('ACTION')) die('You cannot call this script directly !');
+if (!defined('BASEDIR')) die('You cannot call this script directly !');
 
 // FIXME simulates a database as long as it is not implemented
 $algo ["words"] = file_get_contents ( 'db/algo_words.html' );
